# Bachelor-Windows-Test-Version

./: .gitignore  CMakeLists.txt  README.md  patch_release.cmake  requirements.txt
assets/config/: bush_data.json  player_data.json  wall_data.json  zone_data.json
data/: team_2.jsonl  team_3.jsonl
include/header/: AIFactory.h  Bullet.h  BulletThreat.h  Bush.h  CommandState.h  Config.h  CppPlayerAI.h  CppTeamAI.h  Game.h  GameHandler.h  GameMap.h  GameMode.h  GameResult.h  GameState.h  GameStatisticsWindow.h  GridFieldType.h  ICollidable.h  Logger.h  MLDataCollector.h  Matchup.h  NullTeamAI.h  Player.h  PlayerAI.h  PlayerEntry.h  PlayerState.h  PlayerStrategyFactory.h  PythonEnvironment.h  PythonPlayerAI.h  PythonStrategyLoader.h  PythonTeamAI.h  ResourceManager.h  StrategyConfigurations.h  Team.h  TeamAI.h  TeamStrategyFactory.h  TeamZoneColors.h  UserControlledPlayerAI.h  Vec2.h  Wall.h  WindowUtils.h  (+1 more)
include/header/collisionDetection/: CollisionManager.h
include/header/parser/: JSONBushParser.h  JSONPlayerParser.h  JSONWallParser.h  JSONZoneParser.h
include/header/pathfinding/: AStarPathFinder.h  MoveCommand.h  MoveType.h
include/header/screen/: MainMenuScene.h  Scene.h  SceneManager.h  SingleGameScene.h  TeamSelectionScene.h  TeamSelectionViewModel.h  TournamentScene.h  TournamentViewModel.h
include/header/strategy/: StrategyBase.h
include/header/strategy/playerStrategy/: PlayerStrategy.h  StandardPlayerStrategy.h
include/header/strategy/teamStrategy/: DistributionTeamStrategy.h  StandardTeamStrategyFurthest.h  StandardTeamStrategyNearest.h  TeamStrategy.h
logs/: game_2026-5-25_13-38-36.jsonl  game_2026-5-25_13-48-40.jsonl  game_2026-5-26_13-28-46.jsonl  game_2026-5-26_13-36-15.jsonl  game_2026-5-26_14-14-18.jsonl  game_2026-5-4_15-41-49.jsonl  game_2026-5-6_16-55-30.jsonl  ml_2026-5-25_13-48-40.jsonl  ml_2026-5-26_13-28-46.jsonl  ml_2026-5-26_13-36-15.jsonl  ml_2026-5-26_14-14-18.jsonl
src/: AIFactory.cpp  Bullet.cpp  Bush.cpp  Config.cpp  CppPlayerAI.cpp  CppTeamAI.cpp  Game.cpp  GameHandler.cpp  GameMap.cpp  GameStatisticsWindow.cpp  MLDataCollector.cpp  Player.cpp  PlayerStrategyFactory.cpp  PythonEnvironment.cpp  PythonPlayerAI.cpp  PythonStrategyLoader.cpp  PythonTeamAI.cpp  Team.cpp  TeamStrategyFactory.cpp  TeamZoneColors.cpp  UserControlledPlayerAI.cpp  Wall.cpp  Zone.cpp  main.cpp
src/collisionDetection/: CollisionManager.cpp
src/parser/: JSONBushParser.cpp  JSONPlayerParser.cpp  JSONWallParser.cpp  JSONZoneParser.cpp
src/pathfinding/: AStarPathFinder.cpp
src/screen/: MainMenuScene.cpp  SceneManager.cpp  SingleGameScene.cpp  TeamSelectionScene.cpp  TeamSelectionViewModel.cpp  TournamentScene.cpp  TournamentViewModel.cpp
src/strategy/playerStrategy/: StandardPlayerStrategy.cpp
src/strategy/teamStrategy/: DistributionTeamStrategy.cpp  StandardTeamStrategyFurthest.cpp  StandardTeamStrategyNearest.cpp
src_python/ml_python/: feature_builder.py  ml_model_2.joblib  ml_model_2_BACKUP.joblib  train_ml_model.py
src_python/python_strategies/player/autonomous/: base_strategy_autonomous.py  example_strategy.py
src_python/python_strategies/player/with_team_context/: base_strategy_with_team_context.py  example_strategy.py  ml_player_strategy.py
src_python/python_strategies/team/: base_strategy_team.py  smart_zone_assault_team.py
